src/classes/pages/assets/style.css
/* ... */
button.secondary,
.button.secondary {
    background: var(--background-surface);
}

button:hover,
.button:hover {
    background: var(--background-surface1-5);
    text-decoration: none;
}

button.secondary:hover,
.button.secondary:hover {
    background: var(--background-surface-1);
}

button.green,
.button.green {
    color: var(--green3);
}

button.red,
.button.red {
    color: var(--red3);
}

.tabbar {
    display: flex;
}

.tabbar button,
.tabbar .button {
    padding: 0.5rem 1rem;
    height: 40px; /* fixes weird webkit sizing issue (?) which caused the height to be calculated wrong */
}

.tabbar button.secondary,
.tabbar .button.secondary {
    color: var(--text-color-faded);
}

.tabbar button:not(.secondary):hover,
.tabbar .button:not(.secondary):hover {
    background: var(--background-surface1);
}

.mdnote {
    padding: 1rem;
    margin-bottom: 1rem;

    /* default: note-note */
    background: var(--green1);
    color: var(--green);
}

.mdnote .mdnote-title::before {
    content: "📝";
    margin-right: 1rem;
}

.note-danger,
.note-error {
    background: var(--red1);
    color: var(--red);
}

.mdnote.note-danger .mdnote-title::before,
.mdnote.note-error .mdnote-title::before {
    content: "❗";
}

.note-warning,
.note-warn {
    background: var(--yellow1);
    color: var(--yellow);
}

.mdnote.note-warning .mdnote-title::before,
.mdnote.note-warn .mdnote-title::before {
    content: "⚠️";
}

.note-info {
    background: var(--blue1);
    color: var(--blue);
}

.mdnote.note-info .mdnote-title::before {
    content: "ℹ️";
}

a {
    color: var(--blue2);
    text-decoration: none;
}

a:hover {
    text-decoration: underline;
}

h1,
h2,
h3,
h4,
h5,
h6 {
    margin-bottom: 1rem;
    margin-top: 2rem;
    font-weight: 700;
    width: max-content;
    position: relative;
}

h1 br,
h2 br,
h3 br,
h4 br,
h5 br,
h6 br {
    display: none !important;
}

h1.no-margin,
h2.no-margin,
h3.no-margin,
h4.no-margin,
h5.no-margin,
h6.no-margin {
    margin: 0;
}

h1 {
    margin-bottom: 2.5rem;
    margin-top: 3.5rem;
    font-size: 2.5rem;
    text-align: center;
}

h2 {
    font-size: 2rem;
}

h3 {
    font-size: 1.75rem;
}

h4 {
    font-size: 1.5rem;
}

h5 {
    font-size: 1.25rem;
}

h6 {
    font-size: 1rem;
}

.htag {
    color: var(--text-color-faded);
    position: absolute;
    margin-left: 5px;
    opacity: 0;
    transition:
        opacity 0.1s,
        transform 0.1s;
    transform: scale(0);
    top: 0;
}

.htag:hover {
    color: var(--blue);
}

h5 .htag,
h6 .htag {
    display: none;
}

h1:hover .htag,
h2:hover .htag,
h3:hover .htag,
h4:hover .htag,
h5:hover .htag,
h6:hover .htag,
h1:focus .htag,
h2:focus .htag,
h3:focus .htag,
h4:focus .htag,
h5:focus .htag,
h6:focus .htag {
    opacity: 100%;
    transform: scale(1);
}

.mobile-only {
    display: none;
}

@media screen and (max-width: 800px) {
    .mobile-center {
        margin: auto !important;
    }

    .mobile-max {
        width: 100% !important;
    }

    .mobile-only {
        display: block;
    }

    .mobile-flex {
        display: flex !important;
    }

    .mobile-block {
        display: block !important;
    }
}

ul > li,
ol > li {
    margin-top: 0.25rem;
}

p:not(.mdnote p),
pre,
table,
ul,
ol {
    margin-bottom: 1rem;
}

code {
    padding: 0.2rem;
    background: var(--red2);
    color: var(--red3);
    font-family: monospace;
    font-size: 13.5px;
    line-height: 1em;
    max-width: 100%;
}

code * {
    font-family: inherit;
}

pre code {
    white-space: pre;
    background: var(--background-surface);
    color: currentColor;
    padding: 0;
}

pre,
code,
pre code span {
    font-family: monospace;
}

pre {
    --base-brightness: 11%;
    background: var(--background-surface);
    border-left: solid 5px var(--red3);
    padding-left: 0.5rem;
    white-space: pre;
    overflow-x: auto;
    overflow-y: hidden;
    height: max-content;
}

input,
select,
button,
.button {
    height: 40px !important;
}

input,
textarea,
select {
    background: var(--background-surface1);
    color: currentColor;
    border: none;
    outline: none;
    padding: 0.5rem 0.75rem;
    font-size: 16px;
    height: max-content;
    max-width: 100%;
    border-radius: 0 !important;
    transition:
        box-shadow 0.15s,
        opacity 0.15s,
        filter 0.15s;
}

input:invalid:required,
textarea:invalid:required,
select:invalid:required {
    box-shadow: inset 0 0 0 2px var(--red);
}

input:invalid,
textarea:invalid,
select:invalid {
    /* so, the idea behind this is because the input is technically wrong... but it isn't required,
       we're only going to show a yellow "border" thing! */
    box-shadow: inset 0 0 0 2px var(--yellow);
}

input:disabled,
textarea:disabled,
.checkbox-container.disabled,
select:disabled {
    opacity: 50%;
    box-shadow: inset 0 0 0 2px var(--background-surface3);
    filter: opacity(50%);
    cursor: not-allowed !important;
}

input.secondary,
textarea.secondary,
select.secondary {
    background: var(--background-surface);
}

.checkbox-container.secondary {
    background: var(--background-surface);
}

.checkbox-container {
    background: var(--background-surface1);
    padding: 0.5rem 0.75rem;
    display: flex;
    justify-content: center;
    align-items: center;
    height: 2.5rem; /* should match the height of an input element */
    width: 2.5rem;
    cursor: pointer;
    gap: 0.5rem;
}

.checkbox-container + input {
    width: calc(18rem - 2.5rem) !important; /* normal input width - checkbox width */
}

/* not checked */
.checkbox-container input[type="checkbox"]:not(:checked) + .check,
.checkbox-container input[type="checkbox"]:checked + * + .x {
    display: none;
}

.checkbox-container input[type="checkbox"]:checked + .check,
.checkbox-container input[type="checkbox"]:not(:checked) + * + .x {
    display: flex;
    justify-content: center;
    align-items: center;
}

.checkbox-container input[type="checkbox"] {
    display: none;
}
/* ... */

